Finish Norwegian translation.

--- a/translate/no/index.mdh.po
+++ b/translate/no/index.mdh.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2018-05-24 17:39+0000\n"
-"PO-Revision-Date: 2018-05-24 19:53+0200\n"
+"PO-Revision-Date: 2018-05-24 20:21+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: no\n"
@@ -117,6 +117,14 @@ msgid ""
 "changes and enables you to backtrack is usable. When doing "
 "intenationalization"
 msgstr ""
+"Det finnes mange [versjonskontrollsystemer](https://no.wikipedia.org/wiki/"
+"Versjonskontrollsystem). Noen av de best kjente er [GIT](https://git-scm."
+"com/) and [Mercurial](https://www.mercurial-scm.org/), [for en liste se her]"
+"(https://en.wikipedia.org/wiki/List_of_version_control_software), men dette "
+"er ikke nødvendig. Skylagring inneholder som oftest noen former for "
+"versjonskontroll. Vi foretrekker et ordentlig versjonshåndteringsystem, men "
+"alt som tillater deg å gjøre endringer og spore dem er bruktbart når du gjør "
+"internasjonalisering."
 
 #. type: Plain text
 #: site/en/index.mdh:27
@@ -147,6 +155,9 @@ msgid ""
 "project members. We are in the process of developing a list of good tools "
 "you can use to streamline this process."
 msgstr ""
+"Gode verktøy minimerer arbeidsbelastningen og opplæringskostnaden på de som "
+"er involvert i prosjektet. Vi jobber med å sette sammen en liste med gode "
+"verktøy du kan bruke for å strømlinjeforme denne prosessen."
 
 #. type: Plain text
 #: site/en/index.mdh:35
@@ -164,3 +175,11 @@ msgid ""
 "permissive indicate that as well. A license stating simply contact us if you "
 "want to run this yourself is a good starting point."
 msgstr ""
+"Uheldigvis lever vi i en verden der alt per default er "
+"opphavsrettsbeskyttet. Hvis du vil at andre skal kunne bruke prosjektet "
+"ditt, indiker dette med å sette en lisens. Vi anbefaler en av de frie "
+"lisensene fra [Creative Commons](https://creativecommons.no/) som er "
+"tilgjengelig med oversettelser på så godt som alle språk. Hvis du ikke "
+"ønsker å være så åpen, indiker dette også. En lisens som ikke sier noe annet "
+"enn kontakt oss hvis du vil kjøre dette prosjektet selv er et godt "
+"utgangspunkt."
