--- a/translate/index.mdh.po
+++ b/translate/index.mdh.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2018-05-24 17:39+0000\n"
+"POT-Creation-Date: 2018-05-24 23:01+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #. type: Plain text
 #: site/en/index.mdh:3
-msgid "title:Free Libre Open Campaigning theme:spacelab"
+msgid "title:Free Libre Open Collaboration theme:spacelab"
 msgstr ""
 
 #. type: Plain text
@@ -29,11 +29,12 @@ msgstr ""
 #. type: Plain text
 #: site/en/index.mdh:7
 msgid ""
-"Free Libre Open Campaigning is a wordplay on Free Libre Open Source Software "
-"(FLOSS) it is a set of principles to obey by in order to better collaborate "
-"on projects across countries. These principles are not limited to "
-"campaigning, and can be used for any project where you would like to develop "
-"once and run many, another word is Free Libre Open Collaboration."
+"Free Libre Open Collaboration is a wordplay on Free Libre Open Source "
+"Software (FLOSS) it is a set of principles to obey by in order to better "
+"collaborate on projects across countries. These principles were developed to "
+"do campaigning, but they are generally useful for any project where you "
+"would like to develop once and make available in many locations, another "
+"word is Free Libre Open Campaigning."
 msgstr ""
 
 #. type: Plain text
@@ -44,11 +45,12 @@ msgstr ""
 #. type: Plain text
 #: site/en/index.mdh:11
 msgid ""
-"We are NGOs spread across Europe. When doing local campaigns we often need "
-"to do translations and local adaptations. Especially when a campaign is "
-"highgly stylized and made in inaccessiable formats this is not necessarily "
-"easy, and almost the whole campaign has to be remade in each and every "
-"country."
+"We are working on projects in a multinational setting. Often English is "
+"enough, but the majority of the population of the world doesn't speak "
+"English, and even when they all speak the same language there is a need "
+"adaptation to the local environent. Especially when a project is highly "
+"stylized and made in inaccessiable formats this is not necessarily easy, and "
+"almost the whole campaign has to be remade in each and every country."
 msgstr ""
 
 #. type: Plain text
@@ -62,7 +64,7 @@ msgid ""
 "Do yourselves what you like others to do to you. While this probably will "
 "cost you a lot more time the first time you do it, and a little more time "
 "the next times. The benefit comes from the fact that if others do this for "
-"just one campaign, you've probably saved everything and then some."
+"just one project, you've probably saved everything and then some."
 msgstr ""
 
 #. type: Plain text
