--- a/translate/index.mdh.po
+++ b/translate/index.mdh.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2018-06-21 21:13+0000\n"
+"POT-Creation-Date: 2018-09-23 14:42+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -93,9 +93,8 @@ msgid ""
 "com/) and [Mercurial](https://www.mercurial-scm.org/), [for a list see here]"
 "(https://en.wikipedia.org/wiki/List_of_version_control_software), but this "
 "is not necessary. Cloud storage most often also incorporates some kind of "
-"version control, while we prefer a proper scm, anything that let's you do "
-"changes and enables you to backtrack is usable. When doing "
-"intenationalization"
+"version control, while we prefer a proper source control management system, "
+"anything that let's you do changes and enables you to backtrack is usable."
 msgstr ""
 
 #. type: Plain text
